# hybrid-axon-seg

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  clean_output.py  compare.py  config.py  detection.py  morphometrics.py  preprocessing.py  pyproject.toml  qc.py  requirements.txt  run_all.sh  segment.py  test_one.py  utils.py  visualization.py
static/: app.js  index.html  style.css
